[kcms/activities] Fixup DBus path usage

In a code cleanup the path name got corrupted. The use of macros
obfuscates what can be done with a simple string. This code takes it
back to what's helpful.

Whilst we're at it, ResourceScoring was using QDBusInterface and string
based method names. This means syncrononous calls, and also can get
easily broken in future porting, so this is switched to using the
generated interface.

BUG: 433203